c4prj2_input/grade.txt
Grading at Tue Mar  9 07:52:12 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:18:17: error: comparison between pointer and integer [-Werror]
     if( c.value != "?"){
                 ^
input.c:18:17: error: comparison with string literal results in unspecified behavior [-Werror=address]
input.c:19:19: error: incompatible type for argument 1 of ‘add_card_to’
       add_card_to(fc->decks[fc->n_decks],c);
                   ^
In file included from input.c:5:0:
deck.h:17:6: note: expected ‘deck_t * {aka struct deck_tag *}’ but argument is of type ‘deck_t {aka struct deck_tag}’
 void add_card_to(deck_t * deck, card_t c);
      ^
input.c:23:37: error: ‘n_decks’ undeclared (first use in this function)
      add_future_card(fc,fc->n_decks[n_decks]->cards[deck->n_cards],unknown);
                                     ^
input.c:23:37: note: each undeclared identifier is reported only once for each function it appears in
input.c:23:53: error: ‘deck’ undeclared (first use in this function)
      add_future_card(fc,fc->n_decks[n_decks]->cards[deck->n_cards],unknown);
                                                     ^
input.c: In function ‘read_input’:
input.c:40:7: error: request for member ‘n_cards’ in something not a structure or union
   read->n_cards = i;
       ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
